--- a/WoAExplorer/MainPage.xaml
+++ b/WoAExplorer/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<Page SizeChanged="Page_SizeChanged"
     x:Class="WoAExplorer.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,9 +11,31 @@
     Background="{ThemeResource SystemControlChromeHighAcrylicWindowMediumBrush}">
 
     <Grid>
-        <TextBlock x:Name="currentFolderPathTextBlock" HorizontalAlignment="Left" Margin="50,16,0,0" Text="[currentPath]" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Button x:Name="folderUpButton" Content="↑" FontFamily="Segoe UI Symbol" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Style="{StaticResource ButtonRevealStyle}" Click="FolderUpButton_Click"/>
-        <ScrollViewer HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="300" Margin="0, 50, 0, 0">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10" Spacing="10">
+            <Button x:Name="driveDropdownButton" FontFamily="Segoe UI Symbol" Style="{StaticResource ButtonRevealStyle}" Height="40" Width="40">
+                <Button.Flyout>
+                    <Flyout>
+                        <Grid>
+                            <ScrollViewer Width="300" MaxHeight="800">
+                                <ListView x:Name="shortcutsListPanelDropdown" ItemsSource="{x:Bind availableDrives}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <customcontrols:StorageItemControl Item="{Binding}"/>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+                            </ScrollViewer>
+                        </Grid>
+                    </Flyout>
+                </Button.Flyout>
+                <Button.Content>
+                    <FontIcon Glyph="&#xEDA2;"/>
+                </Button.Content>
+            </Button>
+            <Button x:Name="folderUpButton" Content="↑" FontFamily="Segoe UI Symbol" FontSize="20" Style="{StaticResource ButtonRevealStyle}" Click="FolderUpButton_Click" Height="40" Width="40"/>
+            <TextBlock x:Name="currentFolderPathTextBlock" Text="[currentPath]" TextWrapping="Wrap" VerticalAlignment="Center"/>
+        </StackPanel>
+        <ScrollViewer x:Name="shortcutsScrollViewer" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="300" Margin="0, 60, 0, 0">
             <ListView x:Name="shortcutsListPanel" ItemsSource="{x:Bind availableDrives}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -22,7 +44,7 @@
                 </ListView.ItemTemplate>
             </ListView>
         </ScrollViewer>
-        <controls:DropShadowPanel HorizontalAlignment="Stretch" Margin="300,50,0,0" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+        <controls:DropShadowPanel x:Name="contentPane" HorizontalAlignment="Stretch" Margin="300, 60, 0, 0" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
             <ScrollViewer x:Name="contentScrollViewer" >
                 <Grid x:Name="contentGrid" Background="{ThemeResource SystemChromeLowColor}" Opacity="1">
                     <ListView x:Name="contentListPanel" ItemsSource="{x:Bind currentItems}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
